tests/paczka1/fuzzy1/25125431.err
Error in line 3: wiu A803 89,2
Error in line 4: lZZJF7KuQ S889 98,0
Error in line 30: liP S108 74,7
